--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <script src="regression.js"></script>
     <script src="format.js"></script>
-    <title>Covid 19</title>
+    <title>COVID-19 Dashboard</title>
 </head>
 
 <body>
