--- a/index.html
+++ b/index.html
@@ -5,13 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+    <script src="https://www.amcharts.com/lib/4/core.js"></script>
+    <script src="https://www.amcharts.com/lib/4/maps.js"></script>
+    <script src="https://www.amcharts.com/lib/4/geodata/worldLow.js"></script>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link href="https://fonts.googleapis.com/css?family=Comic+Neue&display=swap" rel="stylesheet">
     <script src="regression.js"></script>
     <script src="format.js"></script>
+    <style>
+        p,
+        h1 {
+            font-family: 'Comic Neue', cursive;
+        }
+    </style>
     <title>COVID-19 Dashboard</title>
 </head>
 
 <body>
+    <h1 class="w3-margin">COVID-19 Dashboard</h1>
+    <div id="chartdiv" class="w3-margin" style="width:100%;height:550px;"></div>
     <button class="w3-button w3-hover-lightblue w3-blue w3-margin" id="log">Toggle Log Scale</button>
     <button class="w3-button w3-hover-lightblue w3-blue w3-margin" id="hide">Toggle Projections</button>
     <select class="w3-select w3-third w3-right w3-margin" id="country">
@@ -40,9 +52,10 @@
                 <option>13</option>
                 <option>14</option>
             </select> days: <span id="covidRes"></span></p>
-        <p>The number of days it will take for the coronavirus cases to reach <input id="covidAmt">:<span id="daysRes"></span></p>
+        <p>The number of days it will take for the coronavirus to reach <input id="covidAmt"> cases:<span id="daysRes"></span></p>
     </div>
-    <script src="main.js "></script>
+    <script src="code.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
