--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
         h1 {
             font-family: 'Comic Neue', cursive;
         }
+        
+        .w3-margin {
+            margin: 16px;
+        }
     </style>
     <title>COVID-19 Dashboard</title>
 </head>
