--- a/index.html
+++ b/index.html
@@ -10,24 +10,22 @@
     <script src="https://www.amcharts.com/lib/4/geodata/worldLow.js"></script>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link href="https://fonts.googleapis.com/css?family=Comic+Neue&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="regression.js"></script>
     <script src="format.js"></script>
-    <style>
-        p,
-        h1 {
-            font-family: 'Comic Neue', cursive;
-        }
-        
-        .w3-margin {
-            margin: 16px;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
     <title>COVID-19 Dashboard</title>
 </head>
 
 <body>
     <h1 class="w3-margin">COVID-19 Dashboard</h1>
     <div id="chartdiv" class="w3-margin" style="width:100%;height:550px;"></div>
+    <div class="slidecontainer w3-margin" id="daySlider">
+        <input type="range" value="100" class="slider" id="covidRange">
+        <span id="daysAgo">Today</span>
+    </div>
+    <button class="w3-margin w3-round w3-button w3-red w3-hover-pink" id="playpause"><i class="fa fa-play w3-xlarge"></i></button>
+    <br>
     <button class="w3-button w3-hover-lightblue w3-blue w3-margin" id="log">Toggle Log Scale</button>
     <button class="w3-button w3-hover-lightblue w3-blue w3-margin" id="hide">Toggle Projections</button>
     <select class="w3-select w3-third w3-right w3-margin" id="country">
